Restyle application. Fix minor tripcode issues. See below.
* Add linear gradient to background.
* darken translucent elements.
* Make the flash font-weight bold and increase font-size to 1.3em.
* Add border to posts.
* Set post background to tripcode hex.
* Fix issue where long subjects would cause layout issues.
* Check for board.save_IPs instead of site wide setting.
* Remove flash notice on post creation.
* Fix issue where save_IPs is always true.
* Add version 2 tripcode generator.
* Fix issue where lorem generator would show blank text.

--- a/app/assets/stylesheets/partials/_base.css.sass
+++ b/app/assets/stylesheets/partials/_base.css.sass
@@ -3,7 +3,7 @@ $slow-transition: 500ms
 $fast-transition: 200ms
 
 $opaque: 1.0
-$translucent: 0.4
+$translucent: 0.6
 
 // Fonts
 $fonts: "DejaVu Sans", Arial, Helvetica, sans-serif
@@ -16,12 +16,12 @@ $footer-height: 40px
   +box-sizing(border-box)
 
 html, body
-  height: 100%
-  background-color: $base
+  // +background-image(+linear-gradient(left top, #fff, #ddd))
   color: $dark-base
   font:
     family: $fonts
-
+  height: 100%
+  background-color: lighten($base, 30%)
 
 hr
   border: 1px solid darken($base, 5%)
@@ -48,6 +48,7 @@ a
   visibility: hidden
 
 .container
+  +background-image(linear-gradient(lighten($base, 10%), lighten($base, 15%)))
   min-height: 100%
 
 .wrapper
