--- a/app/assets/stylesheets/partials/_dialogs.css.sass
+++ b/app/assets/stylesheets/partials/_dialogs.css.sass
@@ -6,6 +6,8 @@
   z-index: 9999
 
   text-align: center
+  font-weight: bold
+  font-size: 1.3em
 
   background-color: $accent
   border-bottom: 1px solid $dark-base
