--- a/app/assets/stylesheets/partials/_posts.css.sass
+++ b/app/assets/stylesheets/partials/_posts.css.sass
@@ -14,6 +14,7 @@
       float: left
       font-size: 2.2em
   article
+    border: 1px solid $bold-accent
     min-width: 500px
     max-width: 50%
     display: inline-block
@@ -42,14 +43,10 @@
         font-weight: bold
         a
           text-decoration: none
-  &.parent
-    article
-      background-color: $accent
-
   &.child
     margin-left: +30px
     article
-      background-color: $accent
+      background-color: lighten($accent, 30%)
   
   footer
     margin-top: 5px
@@ -111,11 +108,12 @@
 .reply
   margin-left: +30px
   article
-    background-color: $accent
+    background-color: lighten($accent, 20%)
   display: none
 
 
 .thread-info
+  max-width: 45%
   text-align: right
   font-weight: bold
   font-style: italic
